<resources>
    <string name="app_name">短视频橱窗</string>
    <string name="peizhi">视频、广告图片及广告时间配置：</string>
    <string name="xuanzeshipin">1. 选择需要播放的视频：</string>
    <string name="shipindizhi">视频地址</string>
    <string name="xuanqu">选取</string>
    <string name="xuanzeguanggao">2. 选择广告图片：</string>
    <string name="guanggaodizhi">广告图片地址</string>
    <string name="dianjidizhi">3. 设置点击广告的跳转地址：</string>
    <string name="tiaozhuandizhi">广告跳转地址</string>
    <string name="shijianshezhi">4. 广告时间设置(单位：秒)：</string>
    <string name="xianshishiijian">广告显示时间</string>
    <string name="guanbishijian">广告关闭时间</string>
    <string name="wancheng">完成设置</string>
    <string name="chongzhi">重置</string>
    <string name="canshubuquan">参数未全部填写</string>
    <string name="video">视频</string>
</resources>
