<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                <com.wuwang.mplayer.MyJCVideoPlayerStandard
                        android:id="@+id/jc_video"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                <ImageView
                        android:id="@+id/ad_img"
                        android:layout_width="120dp"
                        android:layout_height="60dp"
                        android:visibility="gone"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:scaleType="centerCrop"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/shinto"
                        />

            </RelativeLayout>


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/peizhi"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"/>


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xuanzeshipin"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorAccent"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <EditText
                        android:id="@+id/video_url"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:maxLines="1"
                        android:hint="@string/shipindizhi"/>

                <Button
                        android:id="@+id/pick_video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:text="@string/xuanqu"/>

            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xuanzeguanggao"
                    android:textColor="@color/colorAccent"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <EditText
                        android:id="@+id/img_url"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:maxLines="1"
                        android:hint="@string/guanggaodizhi"/>

                <Button
                        android:id="@+id/pick_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:text="@string/xuanqu"/>


            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dianjidizhi"
                    android:textColor="@color/colorAccent"
                    android:id="@+id/textView"/>

            <EditText
                    android:id="@+id/redirect_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:maxLines="1"
                    android:hint="@string/tiaozhuandizhi"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shijianshezhi"
                    android:textColor="@color/colorAccent"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <EditText
                        android:id="@+id/ad_show"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:inputType="number"
                        android:hint="@string/xianshishiijian"/>

                <EditText
                        android:id="@+id/ad_close"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:inputType="number"
                        android:hint="@string/guanbishijian"/>

            </LinearLayout>

            <Button
                    android:id="@+id/commit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/wancheng"/>

            <Button
                    android:id="@+id/reset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/chongzhi"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>